--- a/lecture_notes/01_po_dags_notes.tex
+++ b/lecture_notes/01_po_dags_notes.tex
@@ -287,7 +287,7 @@ This estimates the effect for individuals who received the treatment.\footnote{I
 We can also define the conditional average treament effect (CATE). Let $X_{i}$ be a pre-determined set of covariates. Then, we can define the CATE as:
 \begin{defN}
   \begin{equation*}
-    \tau_{CATE}(x) \equiv = \E(Y_{i}(1) | D_{i} = 1, X_{i} = x) - \E(Y_{i}(0)| D_{i} = 1, X_{i} = x).
+    \tau_{CATE}(x) \equiv \E(Y_{i}(1) | D_{i} = 1, X_{i} = x) - \E(Y_{i}(0)| D_{i} = 1, X_{i} = x).
   \end{equation*}
 \end{defN}
 
